--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.1",
     "next": "^15.1.0",
     "react": "^18",
     "react-dom": "^18"
